--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -24,7 +24,7 @@
 
 .header {
     height: 256px;
-    padding: 36px 0px 36px 0px;
+    padding: 36px 0px 0px 0px;
     width: 100%;
 }
 
@@ -55,14 +55,14 @@
 }
 .button {
     width: 150px;
-    height: 60px;
+    height: 50px;
     box-sizing: border-box;
     border-width: 1px;
     border-style: solid;
     border-color: rgba(255, 255, 255, 1);
     border-radius: 5px;
 
-    line-height: 60px;
+    line-height: 50px;
     box-sizing: border-box;
 
     text-align: center;
@@ -77,6 +77,22 @@
     background: url('../public/cardinal.png') center top no-repeat;
     background-size: 40%;
     opacity: 0.9;
+}
+
+.container:before{
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.35;
+    background-image: url('/cardinal.png');
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: center;
+    /* background-size: contain; */
 }
 
 .fontTitle {
@@ -173,7 +189,7 @@
 }
 
 .buttons {
-    padding: 48px 30%;
+    padding: 48px 25%;
 
     display: flex;
     flex-direction: row;
