'Fixed some bugs

--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -46,7 +46,7 @@
 }
 
 .buttonRow {
-    font-weight: 650;
+    /* font-weight: 650; */
     font-style: normal;
     font-size: 16px;
     color: #FFFFFF;
