--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-  min-width: 960px;
+  /* min-width: 960px; */
 }
 
 a {
@@ -24,7 +24,7 @@ body {
   color: white;
   background: black;
 
-  min-width: 960px;
+  /* min-width: 960px; */
 }
 
 
