--- a/styles/HeaderCell.module.css
+++ b/styles/HeaderCell.module.css
@@ -34,6 +34,15 @@
   height: 45px;
 }
 
+.envLabel {
+  font: 200 12px normal sans;
+  color: #aaa;
+  padding: 1px 2px 1px 2px;
+  border: 1px solid #aaa;
+  border-radius: 8px;
+  margin-bottom: 8px;
+}
+
 .logo {
   font-weight: 650;
   font-size: 24px;
