--- a/styles/Bet.module.css
+++ b/styles/Bet.module.css
@@ -441,7 +441,7 @@
   width: 90%;
   min-width: 400px;
   min-height: 200px;
-  border: 1px solid #726b6b
+  border: 1px solid #222
 }
 
 .tipLine {
@@ -481,9 +481,10 @@
   background-color: black;
   
   /* padding: 8px 8px 8px 8px; */
-  border: 1px;
+  /* border: 1px;
   border-style: solid;
-  border-color: rgb(51, 51, 51);
+  border-color: rgb(51, 51, 51); */
+  border-radius: 8px;
 
   row-gap: 8px;
   /* height: 512px; */
