--- a/styles/BetCell.module.css
+++ b/styles/BetCell.module.css
@@ -53,7 +53,7 @@
   max-height: 480px;  
   
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   /* align-items: center; */
 }
