--- a/styles/Bet.module.css
+++ b/styles/Bet.module.css
@@ -9,10 +9,8 @@
   color: #fff;
 }
 
-.poolTypeAndBurn {
-  height: 48px;
+.pool_id_and_burned {
   width: 100%;
-  margin: 0px 16px;
 
   display: flex;
   flex-direction: row;
@@ -30,18 +28,14 @@
   font-weight: 400;
 }
 
-.radio {
-  width: 100%;
-  height: 40px;
-
-
-  display: flex;
+.pool_id {
+  /* display: flex;
   flex-direction: row;
   justify-self: start;
   align-items: center;
-  gap: 10px;
+  gap: 10px; */
 
-  /* color: #06FC99; */
+  color: #06FC99;
   font-size: 14px;
   font-weight: 700;
   font-style: normal;
@@ -61,7 +55,7 @@
   border: solid 1px #333333;
   border-radius: 5px;
 
-  margin-top: 18px;
+  /* margin-top: 18px; */
   margin-bottom: 18px;
 
   display: flex;
