--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -190,7 +190,10 @@
 .walletButton {
   width: 80%;
   height: 35px;
+  line-height: 35px;
+  text-align: center;
   font-size: 16px;
+  margin-top: 8px;
 
   border: 1px;
   border-style: solid;
