--- a/styles/Bet.module.css
+++ b/styles/Bet.module.css
@@ -36,7 +36,7 @@
   align-items: center;
   gap: 10px; */
 
-  color: #06FC99;
+  color: yellow;
   font-size: 14px;
   font-weight: 700;
   font-style: normal;
